--- a/component/navbar.html
+++ b/component/navbar.html
@@ -11,7 +11,7 @@
                   </svg>
                </button>
                <a href="#" class="text-xl font-bold flex items-center lg:ml-2.5">
-               <img src="https://demo.themesberg.com/windster/images/logo.svg" class="h-6 mr-2" alt="Windster Logo">
+               <img src="C:\Users\bowo\Desktop\AbsenKaryawan\Untitled.svg" class="h-6 mr-2" alt="Windster Logo">
                <span class="self-center whitespace-nowrap">INETMEDIA</span>
                </a>
             </div>
